--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -14,6 +14,7 @@ crypto = { path = "../crypto/" }
 logging = { path = "../logging" }
 pos_accounting = { path = "../pos_accounting" }
 serialization = { path = "../serialization" }
+mempool = { path = "../mempool" }
 storage = { path = "../storage", features = ["inmemory"] }
 tx-verifier = { path = "../chainstate/tx-verifier" }
 utils = { path = "../utils" }
