--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,6 +113,7 @@ blake2 = "0.10"
 bytes = "1.1"
 cfg-if = "1.0"
 chacha20poly1305 = "0.10"
+chrono = "0.4"
 clap = "4"
 criterion = "0.4"
 crossterm = "0.26"
@@ -134,6 +135,7 @@ http = "0.2"
 hyper = "0.14"
 iced = "0.9"
 iced_aw = "0.5"
+iced_lazy = "0.6"
 itertools = "0.10"
 jsonrpsee = "0.17"
 lazy_static = "1.4"
@@ -158,6 +160,7 @@ rand = "0.8"
 rand_chacha = "0.3"
 reedline = "0.19"
 replace_with = "0.1"
+rfd = { version = "0.11", default-features = false }
 ripemd = "0.1"
 rlimit = "0.9"
 rstest = "0.17"
