--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -17,6 +17,7 @@ serialization = { path = "../serialization" }
 mempool = { path = "../mempool" }
 storage = { path = "../storage", features = ["inmemory"] }
 tx-verifier = { path = "../chainstate/tx-verifier" }
+chainstate = { path = "../chainstate" }
 utils = { path = "../utils" }
 utxo = { path = "../utxo" }
 wallet-storage = { path = "./storage" }
