--- a/test-rpc-functions/Cargo.toml
+++ b/test-rpc-functions/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chainstate-types = { path = "../chainstate/types" }
+chainstate = { path = "../chainstate/" }
 common = { path = "../common/" }
 crypto = { path = "../crypto/" }
 rpc = { path = "../rpc/" }
