--- a/blockprod/Cargo.toml
+++ b/blockprod/Cargo.toml
@@ -15,6 +15,7 @@ consensus = { path = "../consensus" }
 crypto = { path = "../crypto/" }
 logging = {path = '../logging'}
 mempool = { path = "../mempool/" }
+p2p = { path = "../p2p/" }
 rpc = { path = "../rpc/" }
 serialization = { path = "../serialization" }
 subsystem = { path = "../subsystem/" }
@@ -35,6 +36,7 @@ tokio = { workspace = true, default-features = false, features = ["io-util", "ma
 chainstate-storage = { path = "../chainstate/storage/" }
 chainstate-types = {path = '../chainstate/types'}
 mocks = { path = "../mocks/" }
+storage-inmemory = { path = "../storage/inmemory" }
 test-utils = {path = '../test-utils'}
 
 rstest.workspace = true
