--- a/wallet/wallet-node-client/Cargo.toml
+++ b/wallet/wallet-node-client/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "node-comm"
-version = "0.1.0"
-edition = "2021"
+license.workspace = true
+edition.workspace = true
+version.workspace = true
+rust-version.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
