--- a/api-server/scanner-lib/Cargo.toml
+++ b/api-server/scanner-lib/Cargo.toml
@@ -8,10 +8,19 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-common = { path = '../../common' }
+chainstate = { path = "../../chainstate" }
+common = { path = "../../common" }
+logging = { path = "../../logging" }
 node-comm = { path = "../../wallet/wallet-node-client" }
-logging = { path = "../../logging/" }
+utils = { path = "../../utils" }
 
-tokio = { version = "1.0", features = ["full"] }
-
+async-trait.workspace = true
 thiserror.workspace = true
+tokio = { workspace = true, features = ["full"] }
+
+[dev-dependencies]
+chainstate-test-framework = { path = "../../chainstate/test-framework" }
+crypto = { path = "../../crypto" }
+test-utils = { path = "../../test-utils" }
+
+rstest.workspace = true
