--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,10 @@ edition = "2021"
 [workspace]
 members = [
   "accounting",                   # Accounting and balances abstractions.
-  "api-server/web-server",        # API server, for light-wallets and block explorers: web-server.
-  "api-server/scanner-lib",       # API server, for light-wallets and block explorers: blockchain scanner library.
+  "api-server/api-server-common", # API server, for light-wallets and block explorers: common between web-server and scanner.
   "api-server/scanner-daemon",    # API server, for light-wallets and block explorers: blockchain scanner daemon.
+  "api-server/scanner-lib",       # API server, for light-wallets and block explorers: blockchain scanner library.
+  "api-server/web-server",        # API server, for light-wallets and block explorers: web-server.
   "blockprod",                    # Block production with whatever consensus algorithm.
   "chainstate",                   # Code on chainstate of blocks and transactions.
   "chainstate/test-suite",        # Tests for the chainstate, separated to make use of the chainstate test framework.
