--- a/api-server/scanner-lib/Cargo.toml
+++ b/api-server/scanner-lib/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+api-server-common = { path = "../api-server-common" }
 chainstate = { path = "../../chainstate" }
 common = { path = "../../common" }
 logging = { path = "../../logging" }
