--- a/api-server/api-server-common/Cargo.toml
+++ b/api-server/api-server-common/Cargo.toml
@@ -14,4 +14,5 @@ serialization = { path = "../../serialization" }
 parity-scale-codec.workspace = true
 thiserror.workspace = true
 
-sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
+sqlx = { version = "0.7", features = [ "runtime-tokio", "macros", "sqlite", "postgres" ] }
+tokio = { workspace = true, features = ["full"] }
