--- a/Cargo.toml
+++ b/Cargo.toml
@@ -116,6 +116,7 @@ chacha20poly1305 = "0.10"
 chrono = "0.4"
 clap = "4"
 criterion = "0.5"
+crossbeam-channel = "0.5"
 crossterm = "0.26"
 derive_more = "0.99"
 directories = "5.0"
