--- a/wallet/types/Cargo.toml
+++ b/wallet/types/Cargo.toml
@@ -13,8 +13,9 @@ crypto = { path = "../../crypto/" }
 serialization = { path = "../../serialization" }
 storage = { path = '../../storage', features = ['inmemory'] }
 
-bip39 = { workspace = true, default-features = false, features = ["std", "zeroize"] }
+bip39 = { workspace = true, default-features = false, features = ["std", "zeroize", "rand"] }
 parity-scale-codec.workspace = true
+itertools.workspace = true
 thiserror.workspace = true
 zeroize.workspace = true
 
