--- a/wallet/types/Cargo.toml
+++ b/wallet/types/Cargo.toml
@@ -14,6 +14,7 @@ serialization = { path = "../../serialization" }
 storage = { path = '../../storage', features = ['inmemory'] }
 
 bip39 = { workspace = true, default-features = false, features = ["std", "zeroize", "rand"] }
+hex.workspace = true
 parity-scale-codec.workspace = true
 itertools.workspace = true
 thiserror.workspace = true
