--- a/wallet/types/Cargo.toml
+++ b/wallet/types/Cargo.toml
@@ -13,7 +13,7 @@ crypto = { path = "../../crypto/" }
 serialization = { path = "../../serialization" }
 storage = { path = '../../storage', features = ['inmemory'] }
 
-bip39 = { workspace = true, default-features = false, features = ["std", "zeroize", "rand"] }
+bip39 = { workspace = true, default-features = false, features = ["std", "zeroize"] }
 hex.workspace = true
 parity-scale-codec.workspace = true
 itertools.workspace = true
