--- a/p2p/Cargo.toml
+++ b/p2p/Cargo.toml
@@ -24,10 +24,13 @@ utils = { path = "../utils/" }
 
 async-trait.workspace = true
 bytes.workspace = true
+enum-iterator.workspace = true
 futures.workspace = true
 hex.workspace = true
 itertools.workspace = true
 jsonrpsee = { workspace = true, features = ["macros"] }
+num-derive.workspace = true
+num-traits.workspace = true
 once_cell.workspace = true
 parity-scale-codec.workspace = true
 serde.workspace = true
