--- a/Cargo.toml
+++ b/Cargo.toml
@@ -185,6 +185,7 @@ siphasher = "1.0"
 slave-pool = "0.2"
 snowstorm = "0.4"
 socket2 = "0.5"
+sqlx = "0.7"
 sscanf = "0.4"
 static_assertions = "1.1"
 syn = "2.0"
