--- a/api-server/api-server-common/Cargo.toml
+++ b/api-server/api-server-common/Cargo.toml
@@ -15,9 +15,8 @@ serialization = { path = "../../serialization" }
 
 parity-scale-codec.workspace = true
 thiserror.workspace = true
-
-sqlx = { version = "0.7", features = [ "runtime-tokio", "macros", "sqlite", "postgres" ] }
 tokio = { workspace = true, features = ["full"] }
+sqlx = { workspace = true, features = [ "runtime-tokio", "macros", "sqlite", "postgres" ] }
 
 [dev-dependencies]
 chainstate-test-framework = { path = '../../chainstate/test-framework' }
