--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: "rust:latest"
 
 stages:
+  - build_clean
   - test_cargo
   - build_cargo
   - test_clippy
@@ -25,24 +26,27 @@ before_script:
   - apt-get update -yqq
   - apt-get install -yqq --no-install-recommends build-essential
 
+build:clean:
+  stage: build_cargo
+  script:
+    - rm -rf target
+
 test:cargo:
   stage: test_cargo
   script:
     - rustc --version && cargo --version
-    - rm -rf target
     - cargo test --release --workspace --verbose
 
 build:cargo:
   stage: build_cargo
   script:
     - rustc --version && cargo --version
-    - rm -rf target
     - cargo build --release --locked
 
 test:clippy:
   stage: test_clippy
   script:
-    - rm -rf target
+    - rustup component add clippy
     - cargo clippy --all-features --workspace --all-targets -- -D warnings -A clippy::new_without_default -W clippy::implicit_saturating_sub -W clippy::implicit_clone -W clippy::map_unwrap_or -W clippy::unnested_or_patterns -W clippy::manual_assert -W clippy::unused_async -W clippy::mut_mut -W clippy::todo
     - cargo clippy --all-features --workspace --lib --bins --examples -- -A clippy::all -D clippy::float_arithmetic -W clippy::unwrap_used -W clippy::dbg_macro -W clippy::items_after_statements -W clippy::fallible_impl_from -W clippy::string_slice
 
@@ -55,7 +59,6 @@ test:cargo_deny:
 test:fmt:
   stage: test_fmt
   script:
-    - rm -rf target
     - cargo fmt --all -- --check
 
 test:func:
@@ -67,5 +70,4 @@ test:func:
 test:sighash:
   stage: test_sighash
   script:
-    - rm -rf target
     - cargo test --release -p common mixed_sighash_types -- --ignored
