--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,7 @@ variables:
   RUST_LOG: debug
   RUST_BACKTRACE: full
 
-  # Create a random path to avoid collisions (even though it's an overkill since we're using the pipeline ID)
-  GIT_CLONE_PATH: $CI_BUILDS_DIR/$CI_PIPELINE_ID/mintlayer-core-$(xxd -l 16 -c 16 -p < /dev/random)
+  GIT_CLONE_PATH: $CI_BUILDS_DIR/$CI_PIPELINE_ID/mintlayer-core
 
 workflow:
   rules:
