--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,7 @@
 image: "rust:latest"
 
 stages:
-  - build_clean
-  - test_cargo
-  - build_cargo
-  - test_clippy
-  - test_cargo_deny
-  - test_fmt
-  - test_functional
-  - test_sighash
+  - build_and_test_all
 
 variables:
   RUST_LOG: debug
@@ -26,48 +19,25 @@ before_script:
   - apt-get update -yqq
   - apt-get install -yqq --no-install-recommends build-essential
 
-build:clean:
-  stage: build_clean
+build:cargo:
+  stage: build_and_test_all
   script:
     - rm -rf target
-
-test:cargo:
-  stage: test_cargo
-  script:
+    # build and test
     - rustc --version && cargo --version
-    - cargo test --release --workspace --verbose
-
-build:cargo:
-  stage: build_cargo
-  script:
-    - rustc --version && cargo --version
-    - cargo build --release --locked
-
-test:clippy:
-  stage: test_clippy
-  script:
+    - cargo test --release --all --workspace --verbose
+    - cargo build --release --all --locked
+    # clippy
     - rustup component add clippy
     - cargo clippy --all-features --workspace --all-targets -- -D warnings -A clippy::new_without_default -W clippy::implicit_saturating_sub -W clippy::implicit_clone -W clippy::map_unwrap_or -W clippy::unnested_or_patterns -W clippy::manual_assert -W clippy::unused_async -W clippy::mut_mut -W clippy::todo
     - cargo clippy --all-features --workspace --lib --bins --examples -- -A clippy::all -D clippy::float_arithmetic -W clippy::unwrap_used -W clippy::dbg_macro -W clippy::items_after_statements -W clippy::fallible_impl_from -W clippy::string_slice
-
-test:cargo_deny:
-  stage: test_cargo_deny
-  script:
+    # cargo-deny
     - cargo install cargo-deny
     - cargo deny check advisories licenses
-
-test:fmt:
-  stage: test_fmt
-  script:
+    # fmt
     - rustup component add rustfmt
     - cargo fmt --all -- --check
-
-test:func:
-  stage: test_functional
-  script:
+    # functional tests
     - cargo test --release -p mintlayer-test --test functional -- --ignored
-
-test:sighash:
-  stage: test_sighash
-  script:
+    # sighash tests
     - cargo test --release -p common mixed_sighash_types -- --ignored
