--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -7,8 +7,11 @@ rust-version.workspace = true
 homepage = "https://github.com/mintlayer/mintlayer-core/issues"
 
 [dependencies]
+utils = { path = "../utils" }
 node-lib = { path = "../node-lib" }
+wallet-cli-lib = { path = "../wallet/wallet-cli-lib" }
 
+clap = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ['full'] }
 
 [dev-dependencies]
